--- a/package.json
+++ b/package.json
@@ -1,37 +1,15 @@
 {
   "name": "deepsat-web",
-  "private": true,
-  "description": "A website for the DeepSat project.",
   "version": "0.1.0",
-  "author": "Piotr Grynfelder <dev.pitek@gmail.com>",
-  "dependencies": {
-    "gatsby": "^2.24.54",
-    "gatsby-image": "^2.4.17",
-    "gatsby-plugin-manifest": "^2.4.28",
-    "gatsby-plugin-offline": "^3.2.27",
-    "gatsby-plugin-postcss": "^2.3.11",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.32",
-    "gatsby-source-filesystem": "^2.3.28",
-    "gatsby-transformer-sharp": "^2.5.14",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
-  },
-  "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "postcss-nesting": "^7.0.1",
-    "prettier": "2.1.1",
-    "tailwindcss": "^1.8.8"
-  },
+  "private": true,
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "9.5.3",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   }
 }
