configure for tailwind

--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "deepsat-web",
-  "version": "0.1.0",
-  "private": true,
+  "name": "with-tailwindcss",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.5.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
-  }
+    "next": "latest",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "postcss-flexbugs-fixes": "4.2.1",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^1.7.4"
+  },
+  "license": "MIT"
 }
