--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-tailwindcss",
+  "name": "deepsat-dev",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -7,6 +7,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "fontsource-montserrat": "^3.0.5",
+    "fontsource-open-sans": "^3.0.3",
     "next": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
@@ -15,6 +20,5 @@
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^1.7.4"
-  },
-  "license": "MIT"
+  }
 }
