--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "fontsource-open-sans": "^3.0.3",
     "next": "latest",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-obfuscate": "^3.6.7"
   },
   "devDependencies": {
     "postcss-flexbugs-fixes": "4.2.1",
