--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
     "next": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-obfuscate": "^3.6.7"
-  },
-  "devDependencies": {
+    "react-obfuscate": "^3.6.7",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^1.7.4"
-  }
+  },
+  "devDependencies": {}
 }
