--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "fontsource-montserrat": "^3.0.5",
     "fontsource-open-sans": "^3.0.3",
+    "imagemin-mozjpeg": "^9.0.0",
     "next": "^9.5.3",
+    "next-compose-plugins": "^2.2.0",
+    "next-optimized-images": "^2.6.2",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-preset-env": "^6.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-obfuscate": "^3.6.7",
+    "responsive-loader": "^2.1.1",
+    "sharp": "^0.26.0",
     "tailwindcss": "^1.7.4"
   },
   "devDependencies": {}
