--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "next": "^9.5.3",
     "next-compose-plugins": "^2.2.0",
     "next-optimized-images": "^2.6.2",
+    "next-seo": "^4.7.3",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-preset-env": "^6.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-facebook": "^8.1.4",
     "react-obfuscate": "^3.6.7",
     "responsive-loader": "^2.1.1",
     "sharp": "^0.26.0",
