--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-optimized-images": "^2.6.2",
     "next-seo": "^4.7.3",
     "postcss-flexbugs-fixes": "4.2.1",
+    "postcss-nesting": "^7.0.1",
     "postcss-preset-env": "^6.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
