--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "next start -p $PORT"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^14.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "contentful": "^7.14.8",
     "fontsource-montserrat": "^3.0.5",
     "fontsource-open-sans": "^3.0.3",
     "imagemin-mozjpeg": "^9.0.0",
