--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^14.1.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
     "contentful": "^7.14.8",
     "fontsource-montserrat": "^3.0.5",
     "fontsource-open-sans": "^3.0.3",
@@ -24,6 +21,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-obfuscate": "^3.6.7",
     "responsive-loader": "^2.1.1",
     "sharp": "^0.26.0",
