--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-obfuscate": "^3.6.7",
+    "react-reveal": "^1.2.2",
     "responsive-loader": "^2.1.1",
     "sharp": "^0.26.0",
     "tailwindcss": "^1.7.4"
