--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "next build",
     "start": "next start"
   },
+  "engine": {
+    "node": "14.x"
+  },
   "dependencies": {
     "@chakra-ui/react": "^1.0.1",
     "@contentful/rich-text-react-renderer": "^14.1.2",
