--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
     "contentful": "^7.14.14",
+    "focus-visible": "^5.2.0",
     "fontsource-montserrat": "^3.0.9",
     "fontsource-open-sans": "^3.0.9",
     "framer-motion": "^2.9.4",
@@ -30,7 +31,8 @@
     "react-dom": "17.0.1",
     "react-icons": "^3.11.0",
     "responsive-loader": "^2.2.0",
-    "sharp": "^0.26.3"
+    "sharp": "^0.26.3",
+    "webp-loader": "^0.6.0"
   },
   "devDependencies": {}
 }
