--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "yarn": "1.22.10"
   },
   "dependencies": {
+    "@chakra-ui/clickable": "^1.0.1",
     "@chakra-ui/react": "^1.0.1",
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@emotion/react": "^11.1.1",
