--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "framer-motion": "^2.9.4",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
-    "next": "10.0.2",
+    "next": "^10.0.2",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
     "next-seo": "^4.17.0",
