--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^3.11.0",
+    "react-tsparticles": "^1.18.11",
     "responsive-loader": "^2.2.0",
     "sharp": "^0.26.3",
     "webp-loader": "^0.6.0"
