--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start -p $PORT"
   },
   "engines": {
-    "node": "14.15.0",
+    "node": "14.15.4",
     "yarn": "1.22.10"
   },
   "dependencies": {
@@ -24,6 +24,7 @@
     "framer-motion": "^2.9.4",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^8.0.0",
     "next": "^10.0.2",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
