--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start -p $PORT"
   },
   "engines": {
-    "node": "14.15.0",
+    "node": "14.x",
     "yarn": "1.22.10"
   },
   "dependencies": {
