--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "engines": {
     "node": "14.x",
-    "yarn": "1.22.10"
+    "yarn": "1.22.x"
   },
   "dependencies": {
     "@chakra-ui/clickable": "^1.0.1",
