--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
+    "@fontsource/montserrat": "^4.4.5",
+    "@fontsource/open-sans": "^4.4.5",
     "contentful": "^8",
     "focus-visible": "^5.2.0",
-    "fontsource-montserrat": "^3.0.9",
-    "fontsource-open-sans": "^3.0.9",
     "framer-motion": "^2.9.4",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
