--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "@fontsource/open-sans": "^4.4.5",
     "contentful": "^8",
     "focus-visible": "^5.2.0",
-    "framer-motion": "^2.9.4",
+    "framer-motion": "^4.1.17",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^8.0.0",
-    "next": "^10.0.2",
+    "next": "10",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
     "next-seo": "^4.17.0",
