--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
+[build]
+  command = "npm run build"
+  publish = "out"
+
 [[plugins]]
-  package = "@netlify/plugin-nextjs@3.5.0"
-  
+  package = "@netlify/plugin-nextjs"
