--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT"
+    "start": "next start -p $PORT",
+    "deploy": "next build; next export; gh-pages -d out"
   },
   "engines": {
     "node": "14.x",
@@ -34,8 +35,10 @@
     "react-icons": "^3.11.0",
     "react-tsparticles": "^1.18.11",
     "responsive-loader": "^2.2.0",
-    "sharp": "^0.26.3",
+    "sharp": "^0.29.2",
     "webp-loader": "^0.6.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
