--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@chakra-ui/react": "^1.6.12",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/montserrat": "^4.5.1",
+    "@fontsource/open-sans": "^4.5.2",
     "framer-motion": "^5.2.1",
     "gatsby": "^4.1.0",
     "gatsby-plugin-image": "^2.1.0",
@@ -28,10 +30,12 @@
     "gatsby-plugin-sitemap": "^5.1.0",
     "gatsby-source-contentful": "^6.1.0",
     "gatsby-source-filesystem": "^4.1.0",
+    "gatsby-theme-i18n": "^2.0.0",
     "gatsby-transformer-sharp": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
     "react-tsparticles": "^1.37.2"
   }
 }
