--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "gatsby build && gh-pages -d public --repo https://github.com/deepsat/deepsat.github.io.git"
   },
   "dependencies": {
     "@chakra-ui/gatsby-plugin": "^2.0.2",
@@ -37,5 +38,8 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-tsparticles": "^1.37.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
