--- a/package.json
+++ b/package.json
@@ -1,42 +1,45 @@
 {
-  "name": "deepsat-web",
-  "version": "0.1.0",
+  "name": "web",
+  "version": "1.0.0",
   "private": true,
+  "description": "DeepSat website",
+  "author": "Piotr Grynfelder",
+  "keywords": [
+    "gatsby"
+  ],
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start -p $PORT"
-  },
-  "engines": {
-    "node": "14.x",
-    "yarn": "1.22.x"
+    "develop": "gatsby develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "deploy": "gatsby build && gh-pages -d public --repo https://github.com/deepsat/deepsat.github.io.git"
   },
   "dependencies": {
-    "@chakra-ui/clickable": "^1.0.1",
-    "@chakra-ui/react": "^1.0.1",
-    "@contentful/rich-text-react-renderer": "^15.0.0",
-    "@emotion/react": "^11.1.1",
-    "@emotion/styled": "^11.0.0",
-    "@fontsource/montserrat": "^4.4.5",
-    "@fontsource/open-sans": "^4.4.5",
-    "@netlify/plugin-nextjs": "^3.5.0",
-    "contentful": "^8",
-    "focus-visible": "^5.2.0",
-    "framer-motion": "^4.1.17",
-    "imagemin-mozjpeg": "^9.0.0",
-    "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^9.0.0",
-    "next": "10",
-    "next-compose-plugins": "^2.2.1",
-    "next-optimized-images": "^2.6.2",
-    "next-seo": "^4.17.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.2.0",
-    "react-tsparticles": "^1.18.11",
-    "responsive-loader": "^2.2.0",
-    "sharp": "^0.28.3",
-    "webp-loader": "^0.6.0"
+    "@chakra-ui/gatsby-plugin": "^2.0.2",
+    "@chakra-ui/react": "^1.6.12",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@fontsource/montserrat": "^4.5.1",
+    "@fontsource/open-sans": "^4.5.2",
+    "framer-motion": "^5.2.1",
+    "gatsby": "^4.1.0",
+    "gatsby-plugin-image": "^2.1.0",
+    "gatsby-plugin-manifest": "^4.1.0",
+    "gatsby-plugin-react-helmet": "^5.1.0",
+    "gatsby-plugin-sharp": "^4.1.0",
+    "gatsby-plugin-sitemap": "^5.1.0",
+    "gatsby-source-contentful": "^6.1.0",
+    "gatsby-source-filesystem": "^4.1.0",
+    "gatsby-theme-i18n": "^2.0.0",
+    "gatsby-transformer-sharp": "^4.1.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
+    "react-tsparticles": "^1.37.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
